--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
+:root {
+  --primary-gray: #ebebeb;
+  --secondary-gray: #e5e5e5;
+}
+
+button {
+  cursor: pointer;
+}
+
+.root-background {
+  height: 64px;
+}
+
+html {}
+
 body {
   margin: 0;
+  font-size: 12px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-attachment: fixed !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.hidden {
+  display: none;
+}
+
+.root-container {
+  margin: 0 auto;
+  margin-bottom: 30px;
+  height: calc(100vh - 264px);
+  margin-bottom: 64px;
+}
+
+.root-content {
+  padding: 0;
+  display: flex;
+  height: 100%;
+}
+
+.root-sidenav {
+  width: 225px;
+  background: var(--primary-gray);
+  border-right: 5px solid #b5b6b9;
+}
+
+.page-content {
+  width: calc(100% - 225px);
+  padding: 15px;
+}
+
+a {
+  color: #1c1c1c;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: #353535;
+  text-decoration: none;
+}
+
+.footer {
+  height: 200px;
+  background: #1b1e2a;
 }
